[package]
name = "ngamahi-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.4.1", features = ["alloc"] }
password-hash = { version = "0.4.2", features = ["alloc"] }
futures = "0.3.25"